# 3D_render

./: .gitignore  .gitmodules  3D Render.sln  3D Render.vcxproj  3D Render.vcxproj.filters  CMakeLists.txt  camera.hpp  face.hpp  imgui.ini  main.cpp  main.hpp  object.cpp  vertice.hpp
3D Render/x64/Debug/: 3D Render.exe.recipe  vc143.idb
3D Render/x64/Debug/3D Render.tlog/: 3D Render.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
3D Render/x64/release/: 3D Render.exe.recipe  3D Render.ipdb
3D Render/x64/release/3D Render.tlog/: 3D Render.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
objects/: Position_test.mtl  ReadRoom.mtl  TinyMage.mtl  metalocean.mtl  test_cube.mtl
src/: camera.cpp  camera.hpp  face.hpp  main.cpp  main.hpp  material.hpp  object.cpp  object.hpp  vertice.cpp  vertice.hpp
x64/Debug/: 3D Render.exe.recipe  3D Render.vcxproj.FileListAbsolute.txt  main.obj.enc  vc143.idb
x64/Debug/3D Render.tlog/: 3D Render.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/release/: imgui.ini
